--- a/whatsapp/docker-compose.yml
+++ b/whatsapp/docker-compose.yml
@@ -15,8 +15,8 @@ services:
      environment:
        - SELENIUM=http://firefox:4444/wd/hub
      volumes: 
-       - "./data:/data"
-       - "./config:/config"
+       - "/datalake/ufmg/whatsapp:/data"
+       - "/datalake/ufmg/whatsapp/config:/config"
      working_dir: /app
      networks:
        - selenium
